test/error/bare-return-in-nonvoid-fn.dsk
let f = (x: int) -> int
    return
end
